syntax = "proto3";

package proto;

option go_package = "github.com/blakestevenson/nimbus/internal/plugins/proto";

// PluginService defines the gRPC service for plugin communication
service PluginService {
  rpc Metadata(MetadataRequest) returns (MetadataResponse);
  rpc APIRoutes(APIRoutesRequest) returns (APIRoutesResponse);
  rpc HandleAPI(HandleAPIRequest) returns (HandleAPIResponse);
  rpc UIManifest(UIManifestRequest) returns (UIManifestResponse);
  rpc HandleEvent(HandleEventRequest) returns (HandleEventResponse);
  rpc IsIndexer(IsIndexerRequest) returns (IsIndexerResponse);
  rpc Search(IndexerSearchRequest) returns (IndexerSearchResponse);
  rpc IsDownloader(IsDownloaderRequest) returns (IsDownloaderResponse);
}

// SDKService defines the gRPC service for SDK calls from plugin to host
service SDKService {
  rpc ConfigGet(ConfigGetRequest) returns (ConfigGetResponse);
  rpc ConfigGetString(ConfigGetStringRequest) returns (ConfigGetStringResponse);
  rpc ConfigSet(ConfigSetRequest) returns (ConfigSetResponse);
  rpc ConfigDelete(ConfigDeleteRequest) returns (ConfigDeleteResponse);
}

// Empty request messages
message MetadataRequest {}
message APIRoutesRequest {}
message UIManifestRequest {}

// Metadata response
message MetadataResponse {
  string id = 1;
  string name = 2;
  string version = 3;
  string description = 4;
  repeated string capabilities = 5;
}

// API Routes response
message APIRoutesResponse {
  repeated RouteDescriptor routes = 1;
}

message RouteDescriptor {
  string method = 1;
  string path = 2;
  string auth = 3;
  string tag = 4;
}

// Handle API request/response
message HandleAPIRequest {
  string method = 1;
  string path = 2;
  map<string, StringList> query = 3;
  map<string, StringList> headers = 4;
  bytes body = 5;
  optional int64 user_id = 6;
  repeated string scopes = 7;
  uint32 sdk_server_id = 8;
}

message StringList {
  repeated string values = 1;
}

message HandleAPIResponse {
  int32 status_code = 1;
  map<string, StringList> headers = 2;
  bytes body = 3;
}

// UI Manifest response
message UIManifestResponse {
  repeated UINavItem nav_items = 1;
  repeated UIRoute routes = 2;
  ConfigSection config_section = 3;
}

message UINavItem {
  string label = 1;
  string path = 2;
  string group = 3;
  string icon = 4;
}

message UIRoute {
  string path = 1;
  string bundle_url = 2;
}

// Configuration section for plugin settings
message ConfigSection {
  string title = 1;
  string description = 2;
  repeated ConfigField fields = 3;
}

message ConfigField {
  string key = 1;
  string label = 2;
  string description = 3;
  string type = 4; // text, number, boolean, select, textarea, password, array
  repeated string options = 5; // For select type
  string default_value = 6;
  bool required = 7;
  string placeholder = 8;
  ConfigFieldValidation validation = 9;
}

message ConfigFieldValidation {
  optional int32 min = 1;
  optional int32 max = 2;
  optional string pattern = 3;
  optional string error_message = 4;
}

// Event handling
message HandleEventRequest {
  string type = 1;
  bytes data = 2; // JSON-encoded map
  int64 timestamp = 3;
}

message HandleEventResponse {
  bool success = 1;
  string error = 2;
}

// SDK Config methods
message ConfigGetRequest {
  string key = 1;
}

message ConfigGetResponse {
  bytes value = 1; // JSON-encoded value
  string error = 2;
}

message ConfigGetStringRequest {
  string key = 1;
}

message ConfigGetStringResponse {
  string value = 1;
  string error = 2;
}

message ConfigSetRequest {
  string key = 1;
  bytes value = 2; // JSON-encoded value
}

message ConfigSetResponse {
  string error = 1;
}

message ConfigDeleteRequest {
  string key = 1;
}

message ConfigDeleteResponse {
  string error = 1;
}

// Indexer methods
message IsIndexerRequest {}

message IsIndexerResponse {
  bool is_indexer = 1;
  string error = 2;
}

// Downloader methods
message IsDownloaderRequest {}

message IsDownloaderResponse {
  bool is_downloader = 1;
  string error = 2;
}

message IndexerSearchRequest {
  string query = 1;
  string type = 2;
  repeated string categories = 3;
  string tvdbid = 4;
  string tvrageid = 5;
  int32 season = 6;
  int32 episode = 7;
  string imdbid = 8;
  string tmdbid = 9;
  int32 limit = 10;
  int32 offset = 11;
}

message IndexerSearchResponse {
  repeated IndexerRelease releases = 1;
  int32 total = 2;
  string indexer_id = 3;
  string indexer_name = 4;
  string error = 5;
}

message IndexerRelease {
  string guid = 1;
  string title = 2;
  string link = 3;
  string comments = 4;
  int64 publish_date = 5; // Unix timestamp
  string category = 6;
  int64 size = 7;
  string download_url = 8;
  string description = 9;
  map<string, string> attributes = 10;
  string indexer_id = 11;
  string indexer_name = 12;
}
